# RAVEN_Downloader

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Downloader.py  LICENSE  RAVEN_Downloader.pyproject  README.md  clickable.yaml  loop.py  main.cpp  manifest.json.in  raven.downloader.apparmor  raven.downloader.desktop.in  snapcraft.yaml
.github/workflows/: build-on-prs.yml  gitlab-mirror.yml  gitlab.yml
android/: AndroidManifest.xml  local.properties
android/res/drawable/: splashscreen.xml
assets/: assets.qrc
cmake/: PythonBundle.cmake
doc/src/: qtquickcontrols-gallery.qdoc
plugins/Example/: example.cpp  example.h  plugin.cpp  plugin.h
po/: nl.po  raven.downloader.shohag.pot
python/: DownloadManager.py
qml/: AboutPage.qml  ExportPage.qml  HeaderButton.qml  Main.qml  MainPage.qml  MainPage_old.qml  SettingsPage.qml  qml.qrc  version.js.in
qml/Components/: ContentHubDialog.qml  CustomBottomEdge.qml  CustomButton.qml  CustomComboButton.qml  CustomComboPopup.qml  CustomLabel.qml  CustomProgressBar.qml  DialogBase.qml  DownloadButton.qml  DownloadItemManager.qml  HeaderButton.qml  IndeterminateProgressBar.qml  InfoButton.qml  LayoutsCustom.qml  LoadingOverlay.qml  LomiriButton.qml  MainPageDialogs.qml  MediaItem.qml  MediaItemDialogs.qml  PlaylistProcessor.qml  SectionLabel.qml  SettingsCheckbox.qml  ThinProgressBar.qml  ThumbnailImage.qml  ValidationDialogs.qml  WarningDialog.qml  layouts.qml
qml/icons/media/: .xdp-.goutputstream-R61U01-zIf4a3
qml/js/: utils.js
src/: CMakeLists.txt  __init__.py  download_manager.py  downloadmanager.cpp  downloadmanager.h  embedded_python.cpp  embedded_python.h  format_parser.py  mediaformat.cpp  mediaformat.h  qmldir  storage_manager.py  url_validator.py  youtubedl.cpp  youtubedl.h
